2011-03-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sp07/init.c: Improve coverage.

2011-03-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spwkspace/init.c: Adjust test to account for recent heap change on
	NULL.

2011-03-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/init.c, sp43/sp43.scn: Improve coverage of _Thread_Get.

2011-03-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* spchain/init.c: Improve coverage testing.

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_CONFIG_HEADER(config.h).

2011-02-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp01/init.c, sp01/task1.c, sp02/init.c, sp02/preempt.c, sp02/task1.c,
	sp02/task2.c, sp02/task3.c, sp03/init.c, sp03/task1.c, sp03/task2.c,
	sp04/init.c, sp04/task1.c, sp04/task2.c, sp04/task3.c, sp04/tswitch.c,
	sp05/init.c, sp05/task1.c, sp05/task2.c, sp05/task3.c, sp06/init.c,
	sp06/task1.c, sp06/task2.c, sp06/task3.c, sp07/buffered_io.c,
	sp07/init.c, sp07/task1.c, sp07/task2.c, sp07/task3.c, sp07/task4.c,
	sp07/taskexit.c, sp07/tcreate.c, sp07/tdelete.c, sp07/trestart.c,
	sp07/tstart.c, sp08/init.c, sp08/task1.c, sp09/delay.c, sp09/init.c,
	sp09/isr.c, sp09/screen01.c, sp09/screen02.c, sp09/screen03.c,
	sp09/screen04.c, sp09/screen05.c, sp09/screen06.c, sp09/screen07.c,
	sp09/screen08.c, sp09/screen09.c, sp09/screen10.c, sp09/screen11.c,
	sp09/screen12.c, sp09/screen13.c, sp09/screen14.c, sp09/task1.c,
	sp09/task2.c, sp09/task3.c, sp09/task4.c, sp10/init.c, sp11/init.c,
	sp11/task1.c, sp11/task2.c, sp11/timer.c, sp12/init.c, sp12/pridrv.c,
	sp12/pritask.c, sp12/task1.c, sp12/task2.c, sp12/task3.c, sp12/task4.c,
	sp12/task5.c, sp13/fillbuff.c, sp13/init.c, sp13/putbuff.c,
	sp13/task1.c, sp13/task2.c, sp13/task3.c, sp14/asr.c, sp14/init.c,
	sp14/task1.c, sp14/task2.c, sp15/init.c, sp15/task1.c, sp16/init.c,
	sp16/task1.c, sp16/task2.c, sp16/task3.c, sp16/task4.c, sp16/task5.c,
	sp17/asr.c, sp17/init.c, sp17/task1.c, sp17/task2.c, sp18/init.c,