@@ -98,6 +98,7 @@ sp69/Makefile
 sp70/Makefile
 sp71/Makefile
 sp72/Makefile
+sp73/Makefile
 spassoc01/Makefile
 spchain/Makefile
 spclockget/Makefile
